Fix z-index header y modales

--- a/drop-react/src/components/header/style.css
+++ b/drop-react/src/components/header/style.css
@@ -54,7 +54,7 @@ a.navbar-toggler{
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 10000;
+    z-index: 3;
     background-color: var(--first-color);
     padding: 0 3rem;  
     min-height: 50px;  
